# Accountabilitity_Validation

.github/workflows/: ci.yml
project/: Dockerfile  README.md  ci_trigger.sh  pyproject.toml  requirements.txt
project/.github/workflows/: ci.yml
project/src/project/: ADECONNECT.py  calculation.py
project/tests/: test_unit.py
