[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Tom <Tom.Chang@azed.gov>"]
packages = [{include = "project", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11.5"
pyodbc = ">=5.2.0,<6.0.0"
pandas = ">=2.2.3,<3.0.0"
pytest = ">=8.3.5,<9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
